vlib/v/checker/tests/match_last_branch_only_casted.out
vlib/v/checker/tests/match_last_branch_only_casted.vv:6:10: error: the type of the last expression of the first match branch was `u8`, which is not compatible with `int literal`
    4 |         'a' { 10 }
    5 |         'b' { 500 }
    6 |         else { u8(0) }
      |                ~~~~~
    7 |     }
    8 |
